Hero service makes API calls

--- a/src/app/hero-details/hero-details.component.html
+++ b/src/app/hero-details/hero-details.component.html
@@ -1,2 +1,5 @@
-<h1>{{ hero.name }}</h1>
-<p>{{ hero.description }}</p>
+@if (hero$ | async; as hero) {
+    <h1>{{ hero.name }}</h1>
+    <p>{{ hero.description }}</p>
+}
+
