--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <section>
-  @for (hero of heroes; track $index) {
-    <a routerLink="/hero">{{ hero.name }}</a>
-  }
+  @if (heroes$ | async; as heroes) { @for (hero of heroes; track $index) {
+  <a routerLink="/hero">{{ hero.name }}</a>
+  } }
 </section>
