--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
-<div class="flex flex-col py-4 px-8 gap-5">
-  <section class="bg-secondary p-2 border border-neutral-600 rounded">
+<div class="flex flex-col gap-5">
+  <section class="bg-secondary p-4 border border-neutral-600 rounded">
     <h1 class="text-3xl">Deadlock Heroes & Builds</h1>
   </section>
 
