--- a/src/app/item-builds/item-set-display/item-set-display.component.html
+++ b/src/app/item-builds/item-set-display/item-set-display.component.html
@@ -1,11 +1,23 @@
 <div class="border-2 border-neutral-600 rounded-md">
-    <div class="bg-secondary p-2">
-        <p>{{ name }}</p>
+  <div class="flex justify-between bg-secondary py-4 px-4">
+    <div class="flex gap-2">
+      @if (!isEditEnable) {
+        <p class="">{{ name }}</p>
+        <input type="button" value="Edit" (click)="onEdit()" />
+      } @else {
+        <input class="inline-flex bg-secondary border border-accent rounded-lg w-fit" value="{{ name }}" [(ngModel)]="name" />
+        <input type="button" value="Save" (click)="onEdit()" />
+      }
     </div>
-    
-    <div class="bg-tertriary p-2 grid gap-2 grid-cols-3 md:grid-cols-5 lg:grid-cols-7 xl:grid-cols-12">
-        @for (item of items; track $index) {
-            <app-item-card [item]="item"></app-item-card>
-        }
-    </div>
+    <div (click)="remove()">Remove item set</div>
+  </div>
+
+  <div
+    class="bg-tertriary p-2 grid gap-2 grid-cols-3 md:grid-cols-5 lg:grid-cols-7 xl:grid-cols-12"
+  >
+    @for (item of items; track $index) {
+    <app-item-card [item]="item" (click)="removeItem(item)"></app-item-card>
+    }
+    <div class="w-full max-w-36 h-36 mx-auto" (click)="addItem()">Add item</div>
+  </div>
 </div>
