--- a/src/app/item-builds/item-card/item-card.component.html
+++ b/src/app/item-builds/item-card/item-card.component.html
@@ -2,9 +2,9 @@
   <div
     [ngClass]="
       {
-        Weapon: 'bg-orange-400',
-        Spirit: 'bg-violet-700',
-        Vitality: 'bg-lime-500'
+        WEAPON: 'bg-orange-400',
+        SPIRIT: 'bg-violet-700',
+        VITALITY: 'bg-lime-500'
       }[item.type]
     "
     class="flex h-1/2 p-1 sm:p-2 rounded-t-md"
