--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,16 @@
-<main>
+<main class="md:w-4/5 mx-auto">
+  <section
+    class="bg-secondary p-4 mb-6 border-b border-l border-r border-neutral-600 rounded-b"
+  >
+    <h1 class="text-3xl mb-2">Deadlock Heroes & Builds</h1>
+
+    <div class="flex gap-4 px-2">
+      <a routerLink="/" class="text-xl hover:cursor-pointer">Home</a>
+      <a routerLink="/create-build/" class="text-xl hover:cursor-pointer"
+        >Create Build</a
+      >
+    </div>
+  </section>
+
   <router-outlet />
 </main>
